--- a/home.css
+++ b/home.css
@@ -1,9 +1,9 @@
 body {
-    background-color: black;
+    background-color: white;
 }
 
 h1, p, td {
-    color: white;
+    color: black;
     font-family: Arial;
 }
 
