--- a/home.css
+++ b/home.css
@@ -2,9 +2,19 @@ body {
     background-color: white;
 }
 
+table {
+    width: 80%;
+    align: center;
+    border: 1em solid black;
+
 h1, p, td, th {
     color: black;
     font-family: Arial;
+}
+    
+td, th {
+    text-align: center;
+    padding: 1em;
 }
 
 button {
