--- a/home.css
+++ b/home.css
@@ -5,7 +5,8 @@ body {
 table {
     width: 80%;
     align: center;
-    border: 1em solid black;
+    margin: auto;
+    border: 0.5em solid black;
 }
 
 h1, p, td, th {
@@ -13,6 +14,10 @@ h1, p, td, th {
     font-family: Arial;
 }
     
+h1, p {
+    padding: 0.5em;
+}
+
 td, th {
     text-align: center;
     padding: 1em;
