--- a/home.css
+++ b/home.css
@@ -15,13 +15,17 @@ table {
     color: white;
 }
 
-h1, p, td, th {
+p, td, th {
     color: black;
     font-family: Arial;
 }
     
 h1, p {
     padding: 0.5em;
+}
+
+h1 {
+    color: white;
 }
 
 td, th {
